--- a/app/src/main/res/layout/play_recitem.xml
+++ b/app/src/main/res/layout/play_recitem.xml
@@ -18,19 +18,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/name_part"
         />
+
     <TextView
+        android:id="@+id/score_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.2354s"
-        app:layout_constraintTop_toTopOf="@id/name_part"
-        app:layout_constraintBottom_toBottomOf="@id/name_part"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_goneMarginRight="20dp"
+        android:layout_marginRight="20dp"
+        android:text="0 pts"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="18sp"
-        android:layout_marginRight="20dp"
-        android:id="@+id/buzat"
+        app:layout_constraintTop_toTopOf="@id/name_part"
+        app:layout_constraintBottom_toBottomOf="@id/name_part"
+        app:layout_constraintRight_toRightOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
