--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:type="radial" android:gradientRadius="600dp" android:endColor="@color/black"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+   android:shape="rectangle">
+   <gradient
+      android:endColor="@color/black"
+      android:gradientRadius="600dp"
+      android:type="radial" />
 </shape>
