--- a/app/src/main/res/drawable/splashimg.xml
+++ b/app/src/main/res/drawable/splashimg.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/white"/>
-    <item android:drawable="@drawable/bell" android:gravity="center" android:height="200dp" android:width="250dp"/>
+   <item android:drawable="@color/white" />
+   <item
+      android:width="250dp"
+      android:height="200dp"
+      android:drawable="@drawable/bell"
+      android:gravity="center" />
 
 </layer-list>
