--- a/app/src/main/res/layout/fragment_buzz.xml
+++ b/app/src/main/res/layout/fragment_buzz.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+   xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
+   <data>
 
-    </data>
+   </data>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".fragments.BuzzFragment"
-        android:background="#1E32ED"
-        >
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg"
-            >
+   <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="#1E32ED"
+      tools:context=".fragments.BuzzFragment">
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+      <androidx.constraintlayout.widget.ConstraintLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:background="@drawable/bg">
 
-    </FrameLayout>
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+   </FrameLayout>
 </layout>
