--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -1,86 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+   xmlns:app="http://schemas.android.com/apk/res-auto"
+   xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
+   <data>
 
-    </data>
+   </data>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".fragments.RoomFragment"
-        android:background="#1E32ED"
-        >
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Room Code : 9023"
-                android:textSize="16sp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/alfa_slab_one"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_margin="20dp"
-                android:id="@+id/roomcode"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Waiting for players to join"
-                app:layout_constraintTop_toBottomOf="@id/roomcode"
-                app:layout_constraintLeft_toLeftOf="@id/roomcode"
-                android:textSize="24sp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/alfa_slab_one"
-                android:layout_marginTop="20dp"
-                android:autoSizeTextType="uniform"
-                android:maxLines="1"
-                android:id="@+id/waitintxt"
-                />
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                tools:listitem="@layout/room_recitem"
-                app:layout_constraintTop_toBottomOf="@+id/waitintxt"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_margin="20dp"
-                android:id="@+id/roomrecview"
-                app:layout_constraintBottom_toTopOf="@+id/playbtn"
-                />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Play"
-                android:id="@+id/playbtn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_margin="20dp"
-                />
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminateTint="@color/buzzerred"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:id="@+id/mprogress1"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+   <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="#1E32ED"
+      tools:context=".fragments.RoomFragment">
 
 
-    </FrameLayout>
+      <androidx.constraintlayout.widget.ConstraintLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:background="@drawable/bg">
+
+         <TextView
+            android:id="@+id/roomcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="Room Code : 9023"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+         <TextView
+            android:id="@+id/waitintxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:autoSizeTextType="uniform"
+            android:fontFamily="@font/alfa_slab_one"
+            android:maxLines="1"
+            android:text="Waiting for players to join"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintLeft_toLeftOf="@id/roomcode"
+            app:layout_constraintTop_toBottomOf="@id/roomcode" />
+
+         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/roomrecview"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/playbtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/waitintxt"
+            tools:listitem="@layout/room_recitem" />
+
+         <Button
+            android:id="@+id/playbtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="Play"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+         <ProgressBar
+            android:id="@+id/mprogress1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/buzzerred"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+   </FrameLayout>
 </layout>
